
HORAS TRABALHADAS: 4h

==========
08/02/2008
==========

- Inclusao de classe para gerenciamento de Exceptions

HORAS TRABALHADAS: 4h

==========
13/02/2008
==========

- Correcao de BUGS

HORAS TRABALHADAS: 2h

==========
14/02/2008
==========

- Alteracao do metodo de reconhecimento do tipo de CMS
- Criacao de tabela para reconhecimento da página de autenticação

HORAS TRABALHADAS: 3h

==========
16/02/2008
==========

- Verificacao de validade da pagina de autenticacao do CMS

HORAS TRABALHADAS: 4h

==========
17/02/2008
==========

- Implementacao de novo algoritmo para deteccao de tipo de CMS e validacao da
pagina de autenticacao do CMS

HORAS TRABALHADAS: 4h

==========
18/02/2008
==========

- Implementacao de novo algoritmo para deteccao de tipo de CMS e validacao da
pagina de autenticacao do CMS

HORAS TRABALHADAS: 7h

==========
19/02/2008
==========

- Ajustes no VIEW do cadastro de CMS
- Modificacao do cadastro de usuario, cadastrar/verificar e-mail em LOWERCASE
- Otimizacao na classe base do Model, parametro sequence em save() redundante

HORAS TRABALHADAS: 6h

==========
20/02/2008
==========

- Introspecao adicionado ao Model
- Abstract Controller modificado para incluir o parametro de usuario no Log de
exceptions

HORAS TRABALHADAS: 4h

==========
21/02/2008
==========

- Bugfixes

HORAS TRABALHADAS: 4h

==========
23/02/2008
==========

- Ajustes no cadastro de CMS
- Bugfixes
- Cadastro de CMS concluido
- Listagem de CMS no Dashboard
- Rascunho de layout do dashboard

HORAS TRABALHADAS: 4h

==========
24/02/2008
==========

- Criação de interface do Dashboard
- Ajustes no cadastro de usuário, alteração do método para geração de UID
(identificador de usuário)
- Ajustes no cadastro de CMS, criação de parâmetro CID (identificador de CMS)

HORAS TRABALHADAS: 4h

==========
25/02/2008
==========

- Criação de interface do Dashboard. Incluída ação de carregar CMS, ao clicar
sobre um item de CMS.

HORAS TRABALHADAS: 2h