@@ -149,5 +149,6 @@ HORAS TRABALHADAS: 4h
 
 - Criação de interface do Dashboard. Incluída ação de carregar CMS, ao clicar
 sobre um item de CMS.
+- Ajustes no layout, scrollbar para exibição de feeds e items do queue
 
-HORAS TRABALHADAS: 2h
+HORAS TRABALHADAS: 4h
